[tool.poetry]
name = "chilitools"
version = "0.2.8"
description = "A collection of tools for working with CHILI products"
authors = ["Austin <austin.meier@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
coloredlogs = "^15.0.1"
xmltodict = "^0.12.0"
pyperclip = "^1.8.2"
beautifulsoup4 = "^4.11.1"
packaging = "^21.3"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
